--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&family=Signika&display=swap&family=Poiret+One&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <meta name="viewport" content="width=450px, initial-scale=0.5">
+        <meta name="viewport" content="width=450px, initial-scale=0.9, maximum-scale=1">
     </head>
 
     <body>
