--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta type="description" content="">
         <meta type="keywords" content="">
         <script src="https://kit.fontawesome.com/74947e8914.js" crossorigin="anonymous"></script>
@@ -10,7 +11,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&family=Signika&display=swap&family=Poiret+One&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <meta name="viewport" content="width=device-width, initial-scale=0.9,">
     </head>
 
     <body>
