--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=450px, initial-scale=1.1">
+        <meta name="viewport" content="width=450px, height=device-height, initial-scale=1">
         <meta type="description" content="">
         <meta type="keywords" content="">
         <script src="https://kit.fontawesome.com/74947e8914.js" crossorigin="anonymous"></script>
