--- a/cv.html
+++ b/cv.html
@@ -24,28 +24,16 @@
                     <a href="index.html">Accueil</a>
                 </li>
                 <li>
-                    <a class="active" href="cv.html">CV</a>
+                    <a href="cv.html">CV</a>
                 </li>
                 <li>
                     <a href="index.html#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="index.html#contact">Contact</a>
                 </li>
             </ul>
         </nav>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
-        <p>Page en construction</p>
+        <embed src="cv/CV Integrateur Web.pdf" width="100%" height="1000px" type="application/pdf">
     </body>
 </html>
