--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="index.html">Accueil</a>
                 </li>
                 <li>
-                    <a href="cv.html">CV</a>
+                    <a href="cv.html" target="_blank">CV</a>
                 </li>
                 <li>
                     <a href="#portfolio">Portfolio</a>
@@ -36,7 +36,7 @@
             <h1>Alexandre MENSKOÏ</h1>
             <h2>Intégrateur Web junior</h2>
             <div class="wrapper-home">
-                <a href="#contact" class="cta">
+                <a href="cv/CV Integrateur Web.pdf" download class="cta">
                 Télécharger mon CV
                 </a>
                 <a href="#contact" class="cta">
@@ -216,7 +216,7 @@
                     </div>
                     <div class="hidden-hobbies">
                         <div class="valign">
-                            <p>Passionné de jeux vidéo depuis toujours et également collectionneur (vieux comme récent).</p>
+                            <p>Passionné de jeux vidéo depuis toujours.</p>
                         </div>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                         Vous êtes actuellement en train de le visiter !
                     </p>
                 </a>
-                <a href="https://eldenring.000webhostapp.com/" class="site">
+                <a href="https://eldenring.000webhostapp.com/" class="site" target="_blank">
                     <h3>Site promotionnel Elden Ring</h3>
                     <ul>
                         <li>
