Fixing responsive css and adding 'on top' button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body>
         <main>
-            <nav class="navbar sticky-top navbar-expand-lg bg-light border-dark border-bottom p-0">
+            <nav class="navbar sticky-lg-top navbar-expand-lg bg-light border-dark border-bottom p-0">
                 <div class="container-fluid container-lg">
                     <a class="navbar-brand" href="#">
                         <h2>Alexandre MENSKOÏ</h2>
@@ -78,7 +78,7 @@
 
             <div id="portfolio" class="site-section container-lg">
                 <h2 class="border-bottom border-dark mx-4 mx-lg-0">Portfolio</h2>
-                <div class="d-flex flex-column flex-lg-row">
+                <div class="d-flex flex-column flex-md-row">
                     <a href="#" class="portfolio-section">
                         <h3>Mon Site CV</h3>
                         <p>HTML CSS JS</p>
@@ -100,7 +100,7 @@
                         <img src="assets/Presentation_Spotify.png" alt="Presentation Spotify Clone">
                     </a>
                 </div>
-                <div class="d-flex flex-column flex-lg-row">
+                <div class="d-flex flex-column flex-md-row">
                     <a href="https://macsh.github.io/Connect4/" class="portfolio-section" target="_blank">
                         <h3>Connect 4</h3>
                         <p>HTML CSS JS Jquery</p>
@@ -241,12 +241,12 @@
                 <div class="d-flex flex-wrap">
                     <div class="personal_exp-section">
                         <h3 class="mb-4">Streaming</h3>
-                        <p>Ayant un esprit créatif qui aime partager sa passion j'ai mis en place ma propre chaine de streaming sur la plateforme Twitch afin de pouvoir transmettre ma passion au plus grand nombre.</p>
-                        <p>Dans ce cadre j'ai pu rassembler une centaine de followers en l'espace de quelques mois.</p>
+                        <p>Ayant un esprit créatif, j'ai mis en place ma propre chaîne de streaming sur la plateforme Twitch afin de pouvoir transmettre ma passion au plus grand nombre.</p>
+                        <p>Dans ce cadre, j'ai pu rassembler une centaine de followers en l'espace de quelques mois.</p>
                     </div>
                     <div class="personal_exp-section">
                         <h3 class="mb-4">Rédaction d'article</h3>
-                        <p>Dans la continuité de mon envie de partage j'ai réalisé la rédaction d'articles (test de jeux vidéo, rétrospective, critique cinéma, ...) pour le blog "Band of Geeks" durant 2 ans sur mon temps personnel.</p>
+                        <p>Dans la continuité de mon envie de partage, j'ai rédigé des articles (test de jeux vidéo, rétrospective, critique cinéma, ...) pour le blog "Band of Geeks" durant 2 ans sur mon temps personnel.</p>
                         <p>J'ai également eu la chance de rédiger deux articles qui ont été publiés dans l'ancien magazine "Japan Mag".</p>
                     </div>
                 </div>
@@ -286,6 +286,7 @@
                     <button type="submit">Envoyer</button>
                 </form>
             </div>
+            <button id="back-to-top" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
         </main>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
