Fixing meta tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Alexandre MENSKOÏ</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0">
-        <meta type="description" content="Développeur Web en formation. Déjà familier avec de nombreux langages tel que ReactJS, PHP, SQL et bien plus !">
-        <meta type="keywords" content="CV Web Développeur Web PHP ReactJS JS Jquery MySQL Swift Wordpress HTML CSS Javascript Jquery Photoshop After Effect Premiere Adobe Figma Anglais Permis NodeJS ExpressJS MongoDB Epitech Webacadémie Apple Simplon Streaming Contact">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+        <meta name="description" content="Développeur Web en formation. Déjà familier avec de nombreux langages tel que ReactJS, PHP, SQL et bien plus !">
+        <meta name="keywords" content="CV Web Développeur Web PHP ReactJS JS Jquery MySQL Swift Wordpress HTML CSS Javascript Jquery Photoshop After Effect Premiere Adobe Figma Anglais Permis NodeJS ExpressJS MongoDB Epitech Webacadémie Apple Simplon Streaming Contact">
         <meta property="og:title" content="Alexandre MENSKOÏ">
         <meta property="og:description" content="CV en ligne d'Alexandre MENSKOÏ développeur web en formation chez Epitech. Le PHP n'a plus de secret pour lui, il connaît également le ReactJS et bien d'autres langages !" />
         <meta property="article:published_time" content="2022-07-15" />
