Small css fixes

--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
             <div id="contact" class="site-section container-lg">
                 <h2 class="border-bottom border-dark mx-4 mx-lg-0">Contactez-moi</h2>
                 <form action="https://formspree.io/f/xrgrjryr" class="d-flex flex-column" method="POST">
-                    <label class="mail">
+                    <label>
                         Votre Mail :
-                        <input placeholder="thanos@gmail.com" type="email" name="_replyto" required>
                     </label>
+                    <input placeholder="thanos@gmail.com" type="email" name="_replyto" required>
                     <label>
                         Votre Message :
-                        <textarea placeholder="I am Groot" name="message" required></textarea>
                     </label>
+                    <textarea placeholder="I am Groot" name="message" required></textarea>
                     <button type="submit">Envoyer</button>
                 </form>
             </div>
